<resources>
    <string name="app_name">INDOSAL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_new_acc">Create New Account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="logo_app">Indosal Logo</string>
    <string name="or">Or Login with E-mail</string>
    <string name="or_sign_up">Or Create New Account</string>
    <string name="or_login">Already have an Account?</string>
    <string name="goggle">Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="data_diri">Data Diri</string>
    <string name="nama_depan">First Name</string>
    <string name="nama_belakang">Last Name</string>
    <string name="phone">Nomor Handphone</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="browse_image">Browse Image</string>
    <string name="save">Save</string>
    <string name="main_message">Find your best and most comfortable place!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="profile_icon">Profile</string>
    <string name="home">Home</string>
</resources>