<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserData">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="85dp"
            android:layout_height="66dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/data_diri"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/et_nama_depan"

            android:layout_width="298dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:autofillHints="Nama Depan"
            android:background="@drawable/form_style"
            android:ems="10"
            android:hint="@string/nama_depan"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_nama_belakang"

            android:layout_width="298dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Nama Belakang"
            android:background="@drawable/form_style"
            android:ems="10"
            android:hint="@string/nama_belakang"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nama_depan" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="298dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Phone"
            android:background="@drawable/form_style"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nama_belakang" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="296dp"
            android:layout_height="123dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone">

            <TextView
                android:id="@+id/tv_jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/jenis_kelamin"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/laki_laki"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perempuan" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_alamat"
            android:layout_width="298dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Alamat"
            android:background="@drawable/form_style"
            android:ems="10"
            android:hint="@string/alamat"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_gender" />




        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/foto_profile"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_alamat" />

        <Button
            android:id="@+id/bt_browse_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="#91BF63"
            android:text="@string/browse_image"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="298dp"
            android:layout_height="60dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="#91BF63"
            android:text="@string/save"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_browse_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>